2.1        unreleased
=====================

Notable changes and features
----------------------------
- SQLite version requirement raised to 3.25+
- New syntax for data-start option in oacc and llvm-tce.
  Now it's possible to optionally give a list of pairs of
  <address-space-name>,<data-start>.
  - Added the same option to generatebits with the same syntax.

Notable bugfixes
----------------------------
- ProDe: Fix operand usage and resource boxes to use default colors propagated
  from system theme instead of manually setting them to black and white.
- AlmaIF: Fix a bug in almaif_decoder memory mask computation
- Add a latency to clock/lock cycle counter to increase clock frequency

2.0     November 2022
=====================

Notable changes and features
----------------------------
- Added support for LLVM 15.
- Experimental RISC-V support:
  - Generate RISC-V ASIPs with custom instruction set extensions
    (see the RISC-V Tutorial in manual for usage).
  - New Operation Triggered Architecture (OTA) formats that map to the formats
    of the RISC-V ISA.
  - New operations added to OSAL for RISC-V
  - oacc-riscv compiler driver that is able to adapt to RISC-V
    custom instructions.
- Toolset name change:
  - To reflect the wider ISA support than TTAs, the "TCE" name is now changed
    to "OA" (OpenASIP) in most of the places and the old name phased out.
  - Tools such as the compiler "tcecc" have been deprecated and replaced with
    "oacc". To keep backwards compability, the old tools still work.
- FUGen:
  - Automated function unit RTL implementation generation feature: Hardware
    is generated automatically if an operation has a DAG description that
    can be resolved to an "HDL snippet".
- Zero-register support:
  - Since RISC-V needed it, a new register file attribute "zero-register" was
    added to ADF. This indicates that the first index of the register file is
    hardcoded to a zero value and thus can be utilized as the zero immediate