@@ -8,6 +8,8 @@ Notable changes and features
   Now it's possible to optionally give a list of pairs of
   <address-space-name>,<data-start>.
   - Added the same option to generatebits with the same syntax.
+- AlmaIF: add RAM models which infer the BRAM on Intel Arria 10
+  - Enabled with bram-vendor:intel in generateprocessor parameters.
 
 Notable bugfixes
 ----------------------------
